Properly convert property to env var in @QuarkusIntegrationTest
    Fixes: #17810